fix button text alignment

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -618,6 +618,10 @@ h1, h2, h3, h4, h5, h6 {
   display: inline-block;
   transition: background 0.2s, color 0.2s, border 0.2s;
   cursor: pointer;
+  line-height: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .home__hero-btn--primary {
